--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,6 +255,9 @@ img { width: 100%; height: 100%; object-fit: cover; display: block; }
 
 .hero__title-line {
   display: block;
+  overflow: hidden;
+  padding-bottom: 0.2em;
+  margin-bottom: -0.2em;
 }
 .hero__title-word {
   display: inline-block;
